--- a/docs/overrides/partials/post.html
+++ b/docs/overrides/partials/post.html
@@ -1,14 +1,27 @@
 <article class="md-post md-post--excerpt card">
     <header class="md-post__header">
+        {% if post.authors %}
+        <nav class="md-post__authors md-typeset">
+            {% for author in post.authors %}
+            <span class="md-author">
+                <img src="{{ author.avatar }}" alt="{{ author.name }}" />
+            </span>
+            {% endfor %}
+        </nav>
+        {% endif %}
+
         <div class="md-post__meta md-meta">
             <ul class="md-meta__list">
                 <li class="md-meta__item">
+                    <i class="fas fa-calendar-alt"></i>  <!-- Calendar Icon -->
                     <time datetime="{{ post.config.date.created }}">
                         {{ post.config.date.created.strftime('%d %b %Y') }}
                     </time>
                 </li>
+
                 {% if post.categories %}
                 <li class="md-meta__item">
+                    <i class="fas fa-folder"></i>  <!-- Folder Icon -->
                     Categories:
                     {% for category in post.categories %}
                     <a href="{{ category.url | url }}" class="md-meta__link">
@@ -18,8 +31,10 @@
                     {% endfor %}
                 </li>
                 {% endif %}
+
                 {% if post.meta.tags %}
                 <li class="md-meta__item">
+                    <i class="fas fa-tags"></i>  <!-- Tag Icon -->
                     Tags:
                     {% for tag in post.meta.tags %}
                     {{ tag }}
@@ -27,9 +42,11 @@
                     {% endfor %}
                 </li>
                 {% endif %}
+
                 {% if post.config.readtime %}
                 {% set time = post.config.readtime %}
-                <li class="md-meta__item readtime">
+                <li class="md-meta__item">
+                    <i class="fas fa-clock"></i>  <!-- Clock Icon -->
                     {% if time == 1 %}
                     {{ lang.t("readtime.one") }}
                     {% else %}
@@ -38,16 +55,26 @@
                 </li>
                 {% endif %}
             </ul>
+
+            {% if post.config.draft %}
+            <span class="md-draft">
+                <i class="fas fa-exclamation-circle"></i> Draft
+            </span>
+            {% endif %}
         </div>
     </header>
 
-    <!-- Clickable Post Title -->
-    <h2 class="md-post__title">
-        <a href="{{ post.url }}" class="md-post__link">{{ post.title }}</a>
+    <!-- Clickable Post-Title -->
+    <h2 class="md-post__title md-typeset">
+        <a href="{{ post.url | url}}" class="md-post__link">
+            {{ post.title }}
+        </a>
     </h2>
 
     <div class="md-post__content md-typeset">
-        <p>{{ post.excerpt | default(post.content | truncate(150)) }}</p>
-        <a href="{{ post.url }}" class="read-more">Read More →</a>
+        <p class="md-typeset">{{ post.excerpt | default(post.content | striptags | truncate(150, True)) }}</p>
+        <a href="{{ post.url | url }}" class="read-more">
+            Read More
+        </a>
     </div>
 </article>
