--- a/docs/overrides/partials/post.html
+++ b/docs/overrides/partials/post.html
@@ -72,7 +72,7 @@
     </h2>
 
     <div class="md-post__content md-typeset">
-        <p class="md-typeset">{{ post.excerpt | default(post.content | striptags | truncate(150, True)) }}</p>
+        <p class="md-typeset md-post-description">{{ post.excerpt | default(post.content | striptags | truncate(150, True)) }}</p>
         <a href="{{ post.url | url }}" class="read-more">
             Read More <i class="icon-normal fa-solid fa-circle-arrow-right"></i>  <!-- Right Arrow Icon -->
         </a>
