feat: Remove 'Latest' tag from documentation and update layout for article display

--- a/docs/assets/stylesheets/custom.css
+++ b/docs/assets/stylesheets/custom.css
@@ -13,3 +13,11 @@ body {
 .md-content--post .md-sidebar {
     display: none!important;
 }
+
+#tag\:latest {
+    display: none!important;
+}
+
+.grid.cards.cols-1 {
+    font-size: medium;
+}
